frontend: Fix user item contact details overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -329,7 +329,7 @@ code {
 }
 
 .user-name {
-    font-size: 0.8em;
+    font-size: 0.85em;
     font-weight: 600;
     line-height: 1.2;
 }
@@ -341,7 +341,7 @@ code {
 
 .user-mail,
 .user-mobile {
-    font-size: 0.5em;
+    font-size: 0.6em;
 }
 // }}}
 
